--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
     const fontColour = urlParams.get("fontColour") || "black";
     const fontStrokeColour = urlParams.get("fontStrokeColour") || "red";
     const fontStrokeWidth = parseInt(urlParams.get("fontStrokeWidth")) || 0;
+    let twitchUserId = undefined;
+
     document.getElementsByTagName(
       "body"
     )[0].style = `color: ${fontColour}; font-size: ${fontSize}px; -webkit-text-stroke: ${fontStrokeColour}; -webkit-text-stroke-width: ${fontStrokeWidth}px;`;
@@ -121,6 +123,17 @@
       };
 
       socket.onmessage = async function (event) {
+
+        // Includes some stream meta-data including the user ID of the twitch channel
+        if (twitchUserId === undefined && !event.data.includes("PRIVMSG") && event.data.includes("room-id=")) {
+          const twitchRoomIdRegex = /room-id=([a-z0-9_]*)/m;
+          const twitchRoomIdMatches = event.data.match(twitchRoomIdRegex);
+          twitchUserId = twitchRoomIdMatches[1];
+          console.log("Found Twitch User ID:", twitchUserId);
+
+          await updateWordEmoteMapFromTwitchUserId(twitchUserId);
+        }
+
         // Need to handle "PING" messages to keep the socket connection alive
         if (event.data.startsWith("PING :tmi.twitch.tv")) {
           console.log("Received a PING, sending back PONG");
@@ -155,15 +168,6 @@
           handleParsedEvent(parsedEvent);
           return;
         }
-        // Includes some stream meta-data including the user ID of the twitch channel
-        else if (event.data.includes("JOIN")) {
-          const twitchRoomIdRegex = /room-id=([a-z0-9_]*);/m;
-          const twitchRoomIdMatches = event.data.match(twitchRoomIdRegex);
-          const twitchUserId = twitchRoomIdMatches[1];
-          console.log("Found Twitch User ID:", twitchUserId);
-
-          await updateWordEmoteMapFromTwitchUserId(twitchUserId);
-        }
         // Some common messages sent when first connecting that we don't care about
         else if (
           event.data.includes("Welcome") ||
@@ -171,6 +175,8 @@
           event.data.includes("USERNOTICE") ||
           event.data.includes("CLEARCHAT") ||
           event.data.includes("HOSTTARGET") ||
+          event.data.includes("JOIN") ||
+          event.data.includes("ROOMSTATE") ||
           event.data.includes("CAP * ACK :twitch.tv/tags twitch.tv/commands")
         ) {
           // Ignore known messages that we don't care about
