Added a semi-transparent background and curved border

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:wght@400;700&display=swap');
     body {
       font-family: "Roboto", sans-serif;
+      margin: 0;
+      height: 100vh;
+      width: 100vw;
+    }
+    div#main{
+      background: #000000ad;
+      border-radius: 32px;
+      border: 2px solid #2c2c2c;
+      padding: 16px;
+      height: calc(100vh - 36px); /* Need to remove the padding and border from height to avoid scrollbars */
     }
   </style>
 </head>
